--- a/src/styles.css
+++ b/src/styles.css
@@ -114,7 +114,7 @@
 }
 
 .nav_menu-btn {
-  transition: gap 0.3s var(--cubic-default);
+  transition: gap 0.5s var(--cubic-default);
 }
 
 .nav_menu-btn:hover {
@@ -174,6 +174,41 @@
   gap: 0.5em;
 }
 
+/* ------------------------------ VOORRAAD ------------------------------ */
+
+/* Default Styles */
+/* https://stackoverflow.com/questions/49553864/seamless-move-of-an-arrow-in-a-loop-with-css-animation */
+
+.voorraad_item .btn {
+  transform: translateY(1em);
+  transition: transform 0.3s var(--cubic-default);
+}
+
+.voorraad_item .voorraad_img-cta {
+  opacity: 0;
+  transition: opacity 0.1s var(--cubic-default);
+} 
+
+.voorraad_item .voorraad_img-overlay {
+  opacity: 0;
+  transition: opacity 0.2s var(--cubic-default);
+}
+
+.voorraad_item:hover .voorraad_img-overlay {
+  opacity: 0.6;
+}
+
+.voorraad_item:hover .voorraad_img-cta {
+  opacity: 1;
+  transition: opacity 0.2s var(--cubic-default);
+}
+
+.voorraad_item:hover .voorraad_img-cta .btn {
+  transform: translateY(0em);
+}
+
+
+
 /* ------------------------------ SWIPER ------------------------------ */
 
 .swiper {
@@ -227,3 +262,34 @@
 .swiper-pagination-button.is-second:hover .icon-2 {
   transform: translateX(0%);
 }
+
+
+/* ------------------------------ FOOTER ------------------------------ */
+
+.footer_link {
+  opacity: 1;
+  transition: opacity 0.5s var(--cubic-default);
+}
+
+.footer_link::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--_swatch---dakar-yellow--50);
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s var(--cubic-default);
+}
+
+.footer_link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.footer:has(.footer_link:hover) .footer_link:not(:hover) {
+  opacity: 0.4;
+}
+
